{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Player",
            "id": "4bc5c90f-b983-40fe-b6ba-3c614849319e",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "3dba513b-2509-47bd-a906-69fbdd8b1f8c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "8da8a89a-fe5e-40d1-8679-d4856bea917a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "0d640ac6-9ccb-45b8-9fc0-197c81187905",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "f1ec9fc4-6b1b-4b97-b671-0f45b2a15613",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "486bdbb9-88cc-415a-a036-a9c25ef161a3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "735c5306-70de-4850-a89f-7846ff3c15e7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c56731b6-b393-4c3f-84aa-ba47d53b575d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b9006e8d-66f7-4210-8d2b-24c7b929d60e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "84154b73-c396-4c67-9b69-eb0c104d1a55",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "80f717ff-1a3e-45a4-bfbd-d90a0a7cf42d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea6ffc2c-9377-4012-b243-1f7d76db713c",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0aa28364-1edb-484f-9279-c7d20ed3714f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}